--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,20 +1,31 @@
-@*
- * This template takes a single argument, a String containing a
- * message to display.
- *@
-@(message: String)
+@* index Template File *@
+@(contacts: List[models.ContactModel], contact: Form[models.ContactModel])
 
-@*
- * Call the the `main` template with two arguments. The first
- * argument is a `String` with the title of the page, the second
- * argument is an `Html` object containing the body of the page.
- *@
-@main("Welcome to Play") {
-
-    @*
-     * Get an `Html` object by calling the built-in Play welcome
-     * template and passing a `String` message.
-     *@
-    @play20.welcome(message, style = "Scala")
+@layout {
+	<h2>New Contact</h2>
+	
+	@helper.form(action = routes.Contacts.create) {
+		@helper.inputText(contact("name"), '_label' -> "Name")
+		@helper.inputText(contact("emailAddress"), '_label' -> "Email Address")
+		
+		<input type="submit" value="New Contact"/>
+	}
+	
+	<table>
+		<thead>
+		<tr>
+			<th>Name</th>
+			<th>Email Address</th>
+		</tr>
+	</thead>	
+	<tbody>
+	@contacts.map { contact =>
+		<tr>
+			<td>@contact.name</td>
+			<td>@contact.emailAddress</td>
+		</tr>
+	}
+	</tbody>
+	</table>
 
 }
